tests/FlowtideDotNet.ComputeTests/Substrait/generated/FuncTestCaseParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from ./FuncTestCaseParser.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class FuncTestCaseParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		Whitespace=1, TripleHash=2, SubstraitScalarTest=3, SubstraitAggregateTest=4, 
		SubstraitInclude=5, FormatVersion=6, DescriptionLine=7, Define=8, ErrorResult=9, 
		UndefineResult=10, Overflow=11, Rounding=12, Error=13, Saturate=14, Silent=15, 
		TieToEven=16, NaN=17, AcceptNulls=18, IgnoreNulls=19, NullHandling=20, 
		SpacesOnly=21, Truncate=22, IntegerLiteral=23, DecimalLiteral=24, FloatLiteral=25, 
		BooleanLiteral=26, TimestampTzLiteral=27, TimestampLiteral=28, TimeLiteral=29, 
		DateLiteral=30, PeriodPrefix=31, TimePrefix=32, YearPrefix=33, MSuffix=34, 
		DaySuffix=35, HourSuffix=36, SecondSuffix=37, FractionalSecondSuffix=38, 
		OAngleBracket=39, CAngleBracket=40, IntervalYearLiteral=41, IntervalDayLiteral=42, 
		NullLiteral=43, StringLiteral=44, ColumnName=45, LineComment=46, BlockComment=47, 
		If=48, Then=49, Else=50, Boolean=51, I8=52, I16=53, I32=54, I64=55, FP32=56, 
		FP64=57, String=58, Binary=59, Timestamp=60, Timestamp_TZ=61, Date=62, 
		Time=63, Interval_Year=64, Interval_Day=65, UUID=66, Decimal=67, Precision_Timestamp=68, 
		Precision_Timestamp_TZ=69, FixedChar=70, VarChar=71, FixedBinary=72, Struct=73, 
		NStruct=74, List=75, Map=76, UserDefined=77, Bool=78, Str=79, VBin=80, 
		Ts=81, TsTZ=82, IYear=83, IDay=84, Dec=85, PTs=86, PTsTZ=87, FChar=88, 
		VChar=89, FBin=90, Any=91, AnyVar=92, DoubleColon=93, Plus=94, Minus=95, 
		Asterisk=96, ForwardSlash=97, Percent=98, Eq=99, Ne=100, Gte=101, Lte=102, 
		Gt=103, Lt=104, Bang=105, OParen=106, CParen=107, OBracket=108, CBracket=109, 
		Comma=110, Colon=111, QMark=112, Hash=113, Dot=114, And=115, Or=116, Assign=117, 
		Number=118, Identifier=119, Newline=120;
	public const int
		RULE_doc = 0, RULE_header = 1, RULE_version = 2, RULE_include = 3, RULE_testGroupDescription = 4, 
		RULE_testCase = 5, RULE_testGroup = 6, RULE_arguments = 7, RULE_result = 8, 
		RULE_argument = 9, RULE_aggFuncTestCase = 10, RULE_aggFuncCall = 11, RULE_tableData = 12, 
		RULE_tableRows = 13, RULE_dataColumn = 14, RULE_columnValues = 15, RULE_literal = 16, 
		RULE_qualifiedAggregateFuncArgs = 17, RULE_aggregateFuncArgs = 18, RULE_qualifiedAggregateFuncArg = 19, 
		RULE_aggregateFuncArg = 20, RULE_numericLiteral = 21, RULE_floatLiteral = 22, 
		RULE_nullArg = 23, RULE_intArg = 24, RULE_floatArg = 25, RULE_decimalArg = 26, 
		RULE_booleanArg = 27, RULE_stringArg = 28, RULE_dateArg = 29, RULE_timeArg = 30, 
		RULE_timestampArg = 31, RULE_timestampTzArg = 32, RULE_intervalYearArg = 33, 
		RULE_intervalDayArg = 34, RULE_fixedCharArg = 35, RULE_varCharArg = 36, 
		RULE_fixedBinaryArg = 37, RULE_precisionTimestampArg = 38, RULE_precisionTimestampTZArg = 39, 
		RULE_listArg = 40, RULE_literalList = 41, RULE_dataType = 42, RULE_scalarType = 43, 
		RULE_booleanType = 44, RULE_stringType = 45, RULE_binaryType = 46, RULE_timestampType = 47, 
		RULE_timestampTZType = 48, RULE_intervalYearType = 49, RULE_intervalDayType = 50, 
		RULE_fixedCharType = 51, RULE_varCharType = 52, RULE_fixedBinaryType = 53, 
		RULE_decimalType = 54, RULE_precisionTimestampType = 55, RULE_precisionTimestampTZType = 56, 
		RULE_listType = 57, RULE_parameterizedType = 58, RULE_numericParameter = 59, 
		RULE_substraitError = 60, RULE_funcOption = 61, RULE_optionName = 62, 
		RULE_optionValue = 63, RULE_funcOptions = 64, RULE_nonReserved = 65, RULE_identifier = 66;
	public static readonly string[] ruleNames = {
		"doc", "header", "version", "include", "testGroupDescription", "testCase", 
		"testGroup", "arguments", "result", "argument", "aggFuncTestCase", "aggFuncCall", 
		"tableData", "tableRows", "dataColumn", "columnValues", "literal", "qualifiedAggregateFuncArgs", 
		"aggregateFuncArgs", "qualifiedAggregateFuncArg", "aggregateFuncArg", 
		"numericLiteral", "floatLiteral", "nullArg", "intArg", "floatArg", "decimalArg", 
		"booleanArg", "stringArg", "dateArg", "timeArg", "timestampArg", "timestampTzArg", 
		"intervalYearArg", "intervalDayArg", "fixedCharArg", "varCharArg", "fixedBinaryArg", 
		"precisionTimestampArg", "precisionTimestampTZArg", "listArg", "literalList", 
		"dataType", "scalarType", "booleanType", "stringType", "binaryType", "timestampType", 
		"timestampTZType", "intervalYearType", "intervalDayType", "fixedCharType", 
		"varCharType", "fixedBinaryType", "decimalType", "precisionTimestampType", 
		"precisionTimestampTZType", "listType", "parameterizedType", "numericParameter", 
		"substraitError", "funcOption", "optionName", "optionValue", "funcOptions", 
		"nonReserved", "identifier"
	};

	private static readonly string[] _LiteralNames = {
		null, null, "'###'", "'SUBSTRAIT_SCALAR_TEST'", "'SUBSTRAIT_AGGREGATE_TEST'", 
		"'SUBSTRAIT_INCLUDE'", null, null, "'DEFINE'", "'<!ERROR>'", "'<!UNDEFINED>'", 
		"'OVERFLOW'", "'ROUNDING'", "'ERROR'", "'SATURATE'", "'SILENT'", "'TIE_TO_EVEN'", 
		"'NAN'", "'ACCEPT_NULLS'", "'IGNORE_NULLS'", "'NULL_HANDLING'", "'SPACES_ONLY'", 
		"'TRUNCATE'", null, null, null, null, null, null, null, null, "'P'", "'T'", 
		"'Y'", "'M'", "'D'", "'H'", "'S'", "'F'", null, null, null, null, "'null'", 
		null, null, null, null, "'IF'", "'THEN'", "'ELSE'", "'BOOLEAN'", "'I8'", 
		"'I16'", "'I32'", "'I64'", "'FP32'", "'FP64'", "'STRING'", "'BINARY'", 
		"'TIMESTAMP'", "'TIMESTAMP_TZ'", "'DATE'", "'TIME'", "'INTERVAL_YEAR'", 
		"'INTERVAL_DAY'", "'UUID'", "'DECIMAL'", "'PRECISION_TIMESTAMP'", "'PRECISION_TIMESTAMP_TZ'", 
		"'FIXEDCHAR'", "'VARCHAR'", "'FIXEDBINARY'", "'STRUCT'", "'NSTRUCT'", 
		"'LIST'", "'MAP'", "'U!'", "'BOOL'", "'STR'", "'VBIN'", "'TS'", "'TSTZ'", 
		"'IYEAR'", "'IDAY'", "'DEC'", "'PTS'", "'PTSTZ'", "'FCHAR'", "'VCHAR'", 
		"'FBIN'", "'ANY'", null, "'::'", "'+'", "'-'", "'*'", "'/'", "'%'", "'='", 
		"'!='", "'>='", "'<='", "'>'", "'<'", "'!'", "'('", "')'", "'['", "']'", 
		"','", "':'", "'?'", "'#'", "'.'", "'AND'", "'OR'", "':='"
	};
	private static readonly string[] _SymbolicNames = {
		null, "Whitespace", "TripleHash", "SubstraitScalarTest", "SubstraitAggregateTest", 
		"SubstraitInclude", "FormatVersion", "DescriptionLine", "Define", "ErrorResult", 
		"UndefineResult", "Overflow", "Rounding", "Error", "Saturate", "Silent", 
		"TieToEven", "NaN", "AcceptNulls", "IgnoreNulls", "NullHandling", "SpacesOnly", 
		"Truncate", "IntegerLiteral", "DecimalLiteral", "FloatLiteral", "BooleanLiteral", 
		"TimestampTzLiteral", "TimestampLiteral", "TimeLiteral", "DateLiteral", 
		"PeriodPrefix", "TimePrefix", "YearPrefix", "MSuffix", "DaySuffix", "HourSuffix", 
		"SecondSuffix", "FractionalSecondSuffix", "OAngleBracket", "CAngleBracket", 
		"IntervalYearLiteral", "IntervalDayLiteral", "NullLiteral", "StringLiteral", 
		"ColumnName", "LineComment", "BlockComment", "If", "Then", "Else", "Boolean", 
		"I8", "I16", "I32", "I64", "FP32", "FP64", "String", "Binary", "Timestamp", 
		"Timestamp_TZ", "Date", "Time", "Interval_Year", "Interval_Day", "UUID", 
		"Decimal", "Precision_Timestamp", "Precision_Timestamp_TZ", "FixedChar", 
		"VarChar", "FixedBinary", "Struct", "NStruct", "List", "Map", "UserDefined", 
		"Bool", "Str", "VBin", "Ts", "TsTZ", "IYear", "IDay", "Dec", "PTs", "PTsTZ", 
		"FChar", "VChar", "FBin", "Any", "AnyVar", "DoubleColon", "Plus", "Minus", 
		"Asterisk", "ForwardSlash", "Percent", "Eq", "Ne", "Gte", "Lte", "Gt", 
		"Lt", "Bang", "OParen", "CParen", "OBracket", "CBracket", "Comma", "Colon", 
		"QMark", "Hash", "Dot", "And", "Or", "Assign", "Number", "Identifier", 
		"Newline"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "FuncTestCaseParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static FuncTestCaseParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public FuncTestCaseParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public FuncTestCaseParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class DocContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public HeaderContext header() {
			return GetRuleContext<HeaderContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(FuncTestCaseParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TestGroupContext[] testGroup() {
			return GetRuleContexts<TestGroupContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public TestGroupContext testGroup(int i) {
			return GetRuleContext<TestGroupContext>(i);
		}
		public DocContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_doc; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IFuncTestCaseParserListener typedListener = listener as IFuncTestCaseParserListener;
			if (typedListener != null) typedListener.EnterDoc(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IFuncTestCaseParserListener typedListener = listener as IFuncTestCaseParserListener;
			if (typedListener != null) typedListener.ExitDoc(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFuncTestCaseParserVisitor<TResult> typedVisitor = visitor as IFuncTestCaseParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDoc(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DocContext doc() {
		DocContext _localctx = new DocContext(Context, State);
		EnterRule(_localctx, 0, RULE_doc);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 134;
			header();
			State = 136;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 135;
				testGroup();
				}
				}
				State = 138;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==DescriptionLine );
			State = 140;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class HeaderContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public VersionContext version() {
			return GetRuleContext<VersionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IncludeContext include() {
			return GetRuleContext<IncludeContext>(0);
		}
		public HeaderContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_header; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IFuncTestCaseParserListener typedListener = listener as IFuncTestCaseParserListener;
			if (typedListener != null) typedListener.EnterHeader(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IFuncTestCaseParserListener typedListener = listener as IFuncTestCaseParserListener;
			if (typedListener != null) typedListener.ExitHeader(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFuncTestCaseParserVisitor<TResult> typedVisitor = visitor as IFuncTestCaseParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitHeader(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public HeaderContext header() {
		HeaderContext _localctx = new HeaderContext(Context, State);
		EnterRule(_localctx, 2, RULE_header);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 142;
			version();
			State = 143;
			include();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VersionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TripleHash() { return GetToken(FuncTestCaseParser.TripleHash, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Colon() { return GetToken(FuncTestCaseParser.Colon, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FormatVersion() { return GetToken(FuncTestCaseParser.FormatVersion, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SubstraitScalarTest() { return GetToken(FuncTestCaseParser.SubstraitScalarTest, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SubstraitAggregateTest() { return GetToken(FuncTestCaseParser.SubstraitAggregateTest, 0); }
		public VersionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_version; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IFuncTestCaseParserListener typedListener = listener as IFuncTestCaseParserListener;
			if (typedListener != null) typedListener.EnterVersion(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IFuncTestCaseParserListener typedListener = listener as IFuncTestCaseParserListener;
			if (typedListener != null) typedListener.ExitVersion(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFuncTestCaseParserVisitor<TResult> typedVisitor = visitor as IFuncTestCaseParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVersion(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public VersionContext version() {
		VersionContext _localctx = new VersionContext(Context, State);
		EnterRule(_localctx, 4, RULE_version);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 145;
			Match(TripleHash);
			State = 146;
			_la = TokenStream.LA(1);
			if ( !(_la==SubstraitScalarTest || _la==SubstraitAggregateTest) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			State = 147;
			Match(Colon);
			State = 148;
			Match(FormatVersion);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IncludeContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TripleHash() { return GetToken(FuncTestCaseParser.TripleHash, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SubstraitInclude() { return GetToken(FuncTestCaseParser.SubstraitInclude, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Colon() { return GetToken(FuncTestCaseParser.Colon, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] StringLiteral() { return GetTokens(FuncTestCaseParser.StringLiteral); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode StringLiteral(int i) {
			return GetToken(FuncTestCaseParser.StringLiteral, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Comma() { return GetTokens(FuncTestCaseParser.Comma); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Comma(int i) {
			return GetToken(FuncTestCaseParser.Comma, i);
		}
		public IncludeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_include; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IFuncTestCaseParserListener typedListener = listener as IFuncTestCaseParserListener;
			if (typedListener != null) typedListener.EnterInclude(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IFuncTestCaseParserListener typedListener = listener as IFuncTestCaseParserListener;
			if (typedListener != null) typedListener.ExitInclude(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFuncTestCaseParserVisitor<TResult> typedVisitor = visitor as IFuncTestCaseParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInclude(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IncludeContext include() {
		IncludeContext _localctx = new IncludeContext(Context, State);
		EnterRule(_localctx, 6, RULE_include);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 150;
			Match(TripleHash);
			State = 151;
			Match(SubstraitInclude);
			State = 152;
			Match(Colon);
			State = 153;
			Match(StringLiteral);
			State = 158;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==Comma) {
				{
				{
				State = 154;
				Match(Comma);
				State = 155;
				Match(StringLiteral);
				}
				}
				State = 160;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TestGroupDescriptionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DescriptionLine() { return GetToken(FuncTestCaseParser.DescriptionLine, 0); }
		public TestGroupDescriptionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_testGroupDescription; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IFuncTestCaseParserListener typedListener = listener as IFuncTestCaseParserListener;
			if (typedListener != null) typedListener.EnterTestGroupDescription(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IFuncTestCaseParserListener typedListener = listener as IFuncTestCaseParserListener;
			if (typedListener != null) typedListener.ExitTestGroupDescription(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFuncTestCaseParserVisitor<TResult> typedVisitor = visitor as IFuncTestCaseParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTestGroupDescription(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TestGroupDescriptionContext testGroupDescription() {
		TestGroupDescriptionContext _localctx = new TestGroupDescriptionContext(Context, State);
		EnterRule(_localctx, 8, RULE_testGroupDescription);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 161;
			Match(DescriptionLine);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TestCaseContext : ParserRuleContext {
		public IdentifierContext functionName;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OParen() { return GetToken(FuncTestCaseParser.OParen, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ArgumentsContext arguments() {
			return GetRuleContext<ArgumentsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CParen() { return GetToken(FuncTestCaseParser.CParen, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eq() { return GetToken(FuncTestCaseParser.Eq, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ResultContext result() {
			return GetRuleContext<ResultContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OBracket() { return GetToken(FuncTestCaseParser.OBracket, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public FuncOptionsContext funcOptions() {
			return GetRuleContext<FuncOptionsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CBracket() { return GetToken(FuncTestCaseParser.CBracket, 0); }
		public TestCaseContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_testCase; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IFuncTestCaseParserListener typedListener = listener as IFuncTestCaseParserListener;
			if (typedListener != null) typedListener.EnterTestCase(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IFuncTestCaseParserListener typedListener = listener as IFuncTestCaseParserListener;
			if (typedListener != null) typedListener.ExitTestCase(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFuncTestCaseParserVisitor<TResult> typedVisitor = visitor as IFuncTestCaseParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTestCase(this);
			else return visitor.VisitChildren(this);
		}
	}
